--- a/src/index.css
+++ b/src/index.css
@@ -1,54 +1,3 @@
 @import url("@/styles/reset.css");
 @import url("@/styles/variables.css");  
-
-header {
-    width: 100%;
-    height: var(--header-height);
-    background-color: var(--light-pink-color);
-    position: fixed;
-    z-index: 1;
-}
-
-main {
-    padding-top: var(--header-height);
-    min-height: 100vh;
-    background-color: aliceblue;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.container {
-  width: var(--container-width);
-  padding: 10px;
-}
-
-.tiles {
-  margin-top: 40px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  column-gap: 10px;
-}
-.tile {
-  width: calc(50% - 5px);
-  margin-bottom: 10px;
-  height: auto;
-  background-color: tomato;
-  background-size: cover;
-  aspect-ratio: 1 / 1;
-}
-
-@media screen and (min-width: 640px) {
-  .tile {
-    width: calc(33% - 5px);
-    margin-bottom: 10px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .tile {
-    width: calc(25% - 10px);
-    margin-bottom: 10px;
-  }
-}
+@import url("@/styles/typography.css");
